src/objects/powerpack__Skip_Case_Relationship__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds the list of case relationships to ignore while checking for warnings.</description>
    <fields>
        <fullName>powerpack__Relationship_Names_1__c</fullName>
        <label>Relationship Names 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Relationship_Names_2__c</fullName>
        <label>Relationship Names 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>powerpack__Relationship_Names_3__c</fullName>
        <label>Relationship Names 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Skip Case Relationship</label>
</CustomObject>